# ToDoLsit

./: .gitignore  CMakeLists.txt  Main.qml  README.md  TodoList.qml  main.cpp  todolist.cpp  todolist.h  todomodel.cpp  todomodel.h
